# instro

./: .clippy.toml  .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  pyproject.toml  setup.sh  skills-lock.json
.githooks/: pre-push
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: build-check-test.yml  publish-testpypi.yml  release-please-publish.yml  release-please.yml
crates/instro-test-utils/: Cargo.toml
crates/instro-test-utils/src/: lib.rs
crates/opcua-test/: Cargo.toml
docs/guides/: AGENTS.md  CONTRIBUTING.md  README.md  docs.json  generate_examples.py  index.mdx
docs/reference/: generate_examples.py  mkdocs.yml
examples/custom/: simple_temp_controller.py
examples/daq/: daq_analog_loopback.py  daq_multi_rate_ni.py  daq_read_analog_hw_timed.py  daq_read_analog_hw_timed_no_background.py  daq_read_analog_sw_timed.py  daq_read_digital_line.py  daq_read_digital_port.py  daq_relays.py  daq_write_analog_sw_timed.py  daq_write_digital_line.py  daq_write_digital_port.py
examples/dmm/: dmm_basic.py
examples/eload/: eload.py
examples/ethernetip/: minimal_example.py  (+3 more)
scripts/: eip_closing_bell_sim.py
tests/: cpppo_sim_server.py  dnm_eip_live_proxy.py  ethernetip_fakes.py  ethernetip_wheel_smoke.py  test_cpppo_sim_server.py  test_ethernetip_bindings.py  test_ethernetip_config_data_type.py  test_ethernetip_config_timing.py  test_ethernetip_optional_native.py  test_ethernetip_python_api.py  test_ethernetip_route_path_config.py  test_examples.py  test_instro_scope.py
(+279 files in other folders)
